assert-struct/tests/snapshots/comparison__less_than_failure.snap
---
source: assert-struct/tests/comparison.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/comparison_errors/less_than_failure.rs:24:21
   |
24 |             height: < 6.0,  // This should fail
   |                     ^^^^^ got 6.2
